# raylib-game

./: CMakeLists.txt  README.md
scripts/: build_project.sh  generate_and_build.sh  generate_build.sh
src/: main.cpp
